# scikit-downscale

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  azure-pipelines.yml  dev-requirements.txt  doc-requirements.txt  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.binder/: Dockerfile  dask_config.yaml  environment.yml  postBuild
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: main.yaml  pypi.yaml  release-drafter.yaml
ci/: environment.yml  py36.yml  py37.yml  py38.yml  py39.yml
data/uas/: uas.gridMET.NAM-44i.Colorado.19801990.nc  uas.hist.CanESM2.CRCM5-UQAM.day.NAM-44i.raw.Colorado.19801990.nc  uas.rcp85.CanESM2.CRCM5-UQAM.day.NAM-44i.raw.Colorado.19902000.nc
docs/: api.rst  conf.py  environment.yml  index.rst  roadmap.rst
docs/background/: index.rst
docs/how-to/: index.rst
docs/tutorials/: analog-methods.ipynb  bcsd-temperature-precipitation.ipynb  getting-started.ipynb  index.rst
examples/: 2020ECAHM-scikit-downscale.ipynb  bcsd_example.ipynb  gard_example.ipynb  test_daily_bcsd.ipynb  utils.py
paper/: paper.md
scripts/: run_bcsd.py
skdownscale/: __init__.py
skdownscale/pipelines/: bcsd_wrapper.py  gard_wrapper.py
skdownscale/pointwise_models/: __init__.py  arrm.py  base.py  bcsd.py  core.py  gard.py  groupers.py  grouping.py  quantile.py  quantile_mapping.py  trend.py  utils.py  zscore.py
skdownscale/spatial_models/: __init__.py  regridding.py  sd.py
skdownscale/test/: __init__.py  test_grouping.py  test_pointwise_models.py  test_pointwise_runner.py  test_spatial_models.py
xsd/: __init__.py  bcsd.py  delta.py  dqm.py  eqm.py  pointwise_models.py  qdm.py  qm.py  quantile_mapping.py  scaling.py  utils.py  xsd.py
xsd/pointwise_models/: __init__.py  bcsd.py  core.py  gard.py  groupers.py  utils.py  zscore.py
xsd/test/: __init__.py  conftest.py  test_MAB.py  test_bcsd.py  test_pointwise_models.py  test_pointwise_runner.py  test_qm.py  test_scaling.py
