[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=8.0", "setuptools>=75"]

[project]
    authors = [{ name = "Joe Hamman", email = "jhamman@ucar.edu" }]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
    ]
    dependencies = ["scikit-learn>=1.5", "xarray>=2024.10"]
    description = "Statistical downscaling and postprocessing models for climate and weather model simulations."
    dynamic = ["version"]
    license = { text = "Apache" }
    name = "scikit-downscale"
    readme = "README.md"
    requires-python = ">=3.12"

[project.urls]
    Homepage = "https://github.com/pangeo-data/scikit-downscale"

[tool.setuptools.packages.find]
    include = ["skdownscale*"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[dependency-groups]
    dev = [
        "netcdf4>=1.7",
        "numpydoc>=1.9.0",
        "pooch>=1.8.2",
        "pre-commit>=4.0",
        "pytest-cov>=6.0",
        "pytest-sugar>=1.0",
        "pytest>=8.0",
    ]
    docs = [
        "boto3>=1.40.70",
        "dask>=2024.11",
        "jupyterlab>=4.3",
        "matplotlib>=3.9.4",
        "netcdf4>=1.7",
        "numpydoc>=1.9.0",
        "s3fs>=2025.10.0",
        "scipy>=1.14",
        "sphinx-gallery>=0.19.0",
        "sphinx-rtd-theme>=3.0.2",
        "sphinx>=8.0",
        "zarr>=2.18.2",
    ]

[tool.ruff]
    builtins = ["ellipsis"]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    extend-include = ["*.ipynb"]
    line-length = 100
    target-version = "py312"

[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = []

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    keep-runtime-typing = true

[tool.uv.sources]
    ocr = { workspace = true }
