[options]
setup_requires =
  setuptools_scm

[flake8]
exclude = docs
ignore = E203,E266,E501,W503,F401,E722,E402,C901
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
default_section=THIRDPARTY
known_first_party=skdownscale
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
