[options]
setup_requires =
  setuptools_scm

[flake8]
exclude=docs
ignore=E203,E266,E501,W503,F401,E722,E402,C901
max-line-length=100
max-complexity=18
select=B,C,E,F,W,T4,B9

[isort]
known_first_party=skdownscale
known_third_party = click,distutils,matplotlib,numpy,pandas,pkg_resources,probscale,pytest,scipy,seaborn,setuptools,sklearn,xarray,xsd
multi_line_output=3
include_trailing_comma=True
line_length=100

[tool.black]
line-length=100
